# Py_web_HW_07

./: README.md  alembic.ini  connect_db.py  main.py  models.py  my_select.py  pyproject.toml  seed.py  seed1.py
alembic/versions/: 15a408bf248b_init.py  167dc4b4b20a_init.py  288cc115c62a_init.py  48d636de2200_init.py  5f7310476830_init.py  94dd94287ba4_init.py  9cf7c5f311d3_.py  a7602896a078_init.py  b8c226ed89c8_init.py  c20ca0688851_init.py  ced481ca643f_init.py  dbdad25ba6ac_init.py
test/: alembic.ini  connect_db.py  main.py  seed.py
test/alembic/versions/: b960f28f8924_init.py
