[tool.poetry]
name = "py-web-hw-07"
version = "0.1.0"
description = ""
authors = ["alex_kondr <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_07"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.3"
alchemy = "^20.5"
wheel = "^0.38.4"
mysql-connector-python = "^8.0.32"
faker = "^17.0.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
